# mdtocf

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dump.py  install.sh  md2cf.py  mdtocf.py  pyproject.toml  regexp_test.py  release.sh  requirements-dev.txt  requirements.txt  run.sh  setup-pypi.sh  setup.py
.github/: package.sh
.github/workflows/: codeql-analysis.yml  mdtocf.yml  python-app.yml
classes/: ConfluencePublisher.py  ConfluenceRenderer.py  KeyValue.py  MetadataPlugin.py  __init__.py
examples/: example.md
examples/A/: _index.md
examples/A/B/: bb.md
mdtocf/: __init__.py  mdtocf.py
mdtocf/classes/: ConfluencePublisher.py  ConfluenceRenderer.py  KeyValue.py  MetadataPlugin.py  __init__.py
mdtocf/tests/: __init__.py  regexp.py
tests/: example.md  test_metadata_plugin.py
tests/A/: _index.md  a.md  aa.md  aaa.md
tests/A/B/: bb.md
tests/B/: _index.md
