[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtocf"
version = "1.2.5"
authors = [
    {name = "Olaf Reitmaier Veracierta", email = "olafrv@gmail.com"},
]
description = "Markdown files/directory publishing to Atlassian Confluence"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
license = "MIT"
dependencies = [
    "mistune==3.1.3",
    "pickleDB==1.3.2",
    "atlassian-python-api==4.0.4",
]
keywords = [
    "markdown",
    "confluence",
    "atlassian",
    "publish",
    "mdtocf"
]

[project.optional-dependencies]
dev = ["black", "pytest", "build", "twine"]

[project.scripts]
mdtocf = "mdtocf.mdtocf:main"

[project.urls]
Homepage = "https://github.com/olafrv/mdtocf"
Repository = "https://github.com/olafrv/mdtocf"
Issues = "https://github.com/olafrv/mdtocf/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdtocf*"]

[tool.setuptools.package-data]
mdtocf = ["py.typed"]

